# companion-pack-protocol

./: .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
src/: bridge.ts  commands.rs  context.tsx  handler.rs  index.ts  lib.rs  responses.rs  runner.rs  sandbox-runtime.ts  types.rs  types.ts  version.rs  vite-plugin.ts
