[package]
name = "companion-pack-protocol"
version = "0.1.0"
edition = "2021"
description = "Protocol types and helpers for League Companion gamepacks"
license = "MIT"
repository = "https://github.com/clip-companion/companion-pack-protocol"
readme = "README.md"
keywords = ["gamepack", "protocol", "ipc"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
