[package]
name = "companion-pack-protocol"
version = "0.1.0"
edition = "2021"
description = "Protocol types and helpers for League Companion gamepacks"
license = "MIT"
repository = "https://github.com/clip-companion/companion-pack-protocol"
readme = "README.md"
keywords = ["gamepack", "protocol", "ipc"]
categories = ["development-tools"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Type-safe enums with string conversion
strum = { version = "0.26", features = ["derive"] }

# Derive macros for reducing newtype boilerplate
derive_more = { version = "1.0", features = ["display", "from", "deref", "as_ref"] }

# Validation with declarative attributes
garde = { version = "0.20", features = ["derive"] }

# Typed error handling
thiserror = "1"

[dev-dependencies]
# Property-based testing - finds edge cases automatically
proptest = "1.4"
# Snapshot testing - catches serialization regressions
insta = { version = "1.34", features = ["json", "redactions"] }
# Parameterized tests - test multiple inputs concisely
test-case = "3.3"
# Async test utilities
tokio-test = "0.4"
